style:input border-color

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,11 @@
-/* start coding here */
+input:hover {
+    border-color:khaki ;
+}
+
+input:disabled {
+    border-color: lightgrey;
+}
+
+input:hover{
+    border-color:pink
+}
